# czds

./: .cookiecutter.json  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  distribute.yml  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/czds/: __init__.py  __main__.py  base.py  configuration.py  connector.py  czds.py  exceptions.py  models.py
src/czds/data/: logging.yml
src/czds/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_base.py  test_connector.py  test_czds.py  test_main.py
